EEB-479 #time 30m #done Added new blog post. Fixed style of pricing page on smaller screens. Fixed issues with blog post list layout.

--- a/themes/bootstrap3/static/css/style.css
+++ b/themes/bootstrap3/static/css/style.css
@@ -278,6 +278,26 @@ figure.floatcenter, .align-center {
     }
 }
 
-.feature-panel {
-    height: 300px
+@media (min-width: 768px) {
+    .feature-panel {
+        height: 270px;
+    }
+}
+
+@media (min-width: 992px) {
+    .feature-panel {
+        height: 360px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .feature-panel {
+        height: 300px;
+    }
+}
+
+@media (min-width: 992px) {
+    article {
+        height: 400px;
+    }
 }
